vlib/v/checker/tests/cannot_cast_to_struct.out
vlib/v/checker/tests/cannot_cast_to_struct.v:10:12: error: cannot convert struct `Abc` to struct `Test`
    8 |
    9 | fn main() {
   10 |     _ := Test(Abc{})
      |               ~~~~~
   11 |     sum := Alphabet(Xyz{})
   12 |     _ = Xyz(sum)
vlib/v/checker/tests/cannot_cast_to_struct.v:12:10: error: cannot cast `Alphabet` to struct
   10 |     _ := Test(Abc{})
   11 |     sum := Alphabet(Xyz{})
   12 |     _ = Xyz(sum)
      |             ~~~
   13 |     _ = Xyz(5)
   14 | }
vlib/v/checker/tests/cannot_cast_to_struct.v:13:10: error: cannot cast `any_int` to struct
   11 |     sum := Alphabet(Xyz{})
   12 |     _ = Xyz(sum)
   13 |     _ = Xyz(5)
      |             ^
   14 | }
